--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Github Profile Viewer</title>
+
+    <!-- Custome CSS -->
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -20,18 +23,40 @@
             <!-- User Input -->
             <label class="mb-2 text-left">User Name</label>
             <input id="user-name" type="text" class="form-control " placeholder="User Name">
+            <button id="search-button" type="button" class="btn btn-primary mt-2">Search</button>
         </div>
+
+        <!-- User Basic Details -->
+        <div class="container " id="profile-details">
+        </div>
+
+        <!-- Repos -->
+        <div id="repos" style="display: none;" class="container my-5">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">repo Num</th>
+                        <th scope="col">repo ID</th>
+                        <th scope="col">Repo Name</th>
+                        <th scope="col">Repo Link</th>
+                    </tr>
+                </thead>
+
+                <tbody class="table-group-divider" id="repoList">
+                </tbody>
+            </table>
+        </div>
+
+
+        <!-- Boot strap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+
+
+        <!-- Custome Script JS -->
+        <script src="script.js"></script>
     </div>
-
-
-    <!-- Boot strap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-
-
-    <!-- Custome Script JS -->
-    <script src="script.js"></script>
 </body>
 
 </html>
