--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <!-- Custome CSS -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="responsive.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -19,7 +23,7 @@
         <!-- Heading / Title  -->
         <h1 class="text-center my-5">GitHub Profile Viewer</h1>
 
-        <div class="my-5 mx-auto w-50">
+        <div class="input-container my-5 mx-auto ">
             <!-- User Input -->
             <label class="mb-2 text-left">User Name</label>
             <input id="user-name" type="text" class="form-control " placeholder="User Name">
